<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/topText"
        android:textSize="25sp"
        android:textColor="@color/textColor"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/paddedTextColor"
        android:padding="7dp"
        android:text="@string/paddedText"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bottomText"
        android:textSize="25sp"
        android:textColor="@color/textColor"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/buttonText"
        android:textColor="@color/buttonTextColor"/>

    <TextView
        android:id="@+id/selectedDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/defaultText"
        android:textSize="15sp"
        android:textColor="@color/textColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dateText"
        android:textSize="18sp"
        android:textColor="@color/text2Color"/>

    <TextView
        android:id="@+id/ageInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/defaultValue"
        android:textSize="25sp"
        android:textColor="@color/textColor"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculatedText"
        android:textSize="18sp"
        android:textColor="@color/text2Color"
        android:textStyle="bold"/>
</LinearLayout>